--- a/style.css
+++ b/style.css
@@ -45,16 +45,15 @@ td:not(:first-child) {
 }
 
 .yes {
-    color: #00ff88;
+    color: #e5ab38;
     -webkit-text-stroke: 0.0001px rgba(255, 255, 255, 0.25);
     font-size: 18px;
     font-weight: 600;
 }
 
 .no {
-    color: #ff4d4d;
+    color: #1f07e0;
     -webkit-text-stroke: 0.0001px rgba(255, 255, 255, 0.25);
-
     font-size: 18px;
     font-weight: 600;
 }
